--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -4,7 +4,9 @@
 # Requires CORSIKA and sim_telarray source code tarballs (plus tarball for
 # CORSIKA optimized build) to be in the same directory as this Dockerfile.
 #
-# hadolint global ignore=DL3013,DL3033,DL3041
+# hadolint global ignore=DL3013,DL3033,DL3041,SC1091
+# - DL3013, DL3033: ignore warnings about installing non-specific versions with microdnf or yum)
+# - SC1091: ignore warning about not being able to source the bashrc
 FROM almalinux:9.5 AS build_image
 ARG BUILD_OPT="prod6-sc"
 ARG EXTRA_DEF="-DMAXIMUM_TELESCOPES=128"
@@ -132,7 +134,6 @@ RUN microdnf update -y && microdnf install -y \
     microdnf clean all && \
     rm -rf /var/cache/dnf/* /tmp/* /var/tmp/*
 
-# hadolint ignore=SC1091
 RUN BUILD_BRANCH=$(echo $BUILD_BRANCH | sed 's#refs/tags/##') \
   && git clone -b "$BUILD_BRANCH" "${SIMTOOLS_REQUIREMENT}" --depth 1 \
   && python${PYTHON_VERSION} -m venv env \
