--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -28,13 +28,13 @@ RUN yum update -y && yum install -y \
     yum clean all && \
     rm -rf /var/cache/yum/* /tmp/* /var/tmp/*
 
+# hadolint ignore=DL3003
 RUN cd /tmp && \
-    wget http://ftp.gnu.org/gnu/autoconf/autoconf-2.71.tar.gz && \
+    wget -nv http://ftp.gnu.org/gnu/autoconf/autoconf-2.71.tar.gz && \
     tar -xzf autoconf-2.71.tar.gz && \
     cd autoconf-2.71 && \
     ./configure --prefix=/usr && \
-    make -j$(nproc) && \
-    make install && \
+    make && make install && \
     cd / && rm -rf /tmp/autoconf-2.71*
 
 ADD corsika_simtelarray.tar.gz .
