--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,7 @@ scripts.simtools-generate-regular-arrays = "simtools.applications.generate_regul
 scripts.simtools-generate-sim-telarray-histograms = "simtools.applications.generate_sim_telarray_histograms:main"
 scripts.simtools-generate-simtel-event-data = "simtools.applications.generate_simtel_event_data:main"
 scripts.simtools-plot-array-layout = "simtools.applications.plot_array_layout:main"
+scripts.simtools-plot-pixel-data = "simtools.applications.plot_pixel_data:main"
 scripts.simtools-plot-tabular-data = "simtools.applications.plot_tabular_data:main"
 scripts.simtools-print-version = "simtools.applications.print_version:main"
 scripts.simtools-production-derive-corsika-limits = "simtools.applications.production_derive_corsika_limits:main"
