--- a/.github/workflows/CI-docs.yml
+++ b/.github/workflows/CI-docs.yml
@@ -82,18 +82,18 @@ jobs:
         if: github.event_name == 'release'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: docs/build/html
-          TARGET-FOLDER: ${{ github.ref_name }}  # e.g., v0.7.0
-          CLEAN: false
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: docs/build/html
+          target-folder: ${{ github.ref_name }}  # e.g., v0.7.0
+          clean: false
 
       - name: Deploy dev docs on PR merge to main
-        if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
+        if: (github.event_name == 'pull_request' && github.event.pull_request.merged == true) || github.event_name == 'workflow_dispatch'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: docs/build/html
-          TARGET-FOLDER: dev
-          CLEAN: false
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: docs/build/html
+          target-folder: dev
+          clean: false
