Change integration tests to follow the new naming of the run number arguments

--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_North_corsika_corsika_particle_id.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_North_corsika_corsika_particle_id.yml
@@ -11,7 +11,8 @@ CTA_SIMPIPE:
       ARRAY_LAYOUT_NAME: test_layout
       PRIMARY: 1
       PRIMARY_ID_TYPE: corsika7_id
-      RUN_NUMBER_START: 10
+      RUN_NUMBER_OFFSET: 9
+      RUN_NUMBER: 1
       NUMBER_OF_RUNS: 2
       AZIMUTH_ANGLE: North
       ZENITH_ANGLE: 20
