--- a/tests/integration_tests/config/simulate_prod_htcondor_generator_gamma_20_deg_North.yml
+++ b/tests/integration_tests/config/simulate_prod_htcondor_generator_gamma_20_deg_North.yml
@@ -13,7 +13,8 @@ CTA_SIMPIPE:
       SITE: North
       ARRAY_LAYOUT_NAME: test_layout
       PRIMARY: gamma
-      RUN_NUMBER_START: 10
+      RUN_NUMBER: 1
+      RUN_NUMBER_OFFSET: 9
       NUMBER_OF_RUNS: 1
       AZIMUTH_ANGLE: North
       ZENITH_ANGLE: 20
