--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_for_trigger_rates.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_for_trigger_rates.yml
@@ -10,8 +10,7 @@ CTA_SIMPIPE:
       SITE: South
       ARRAY_LAYOUT_NAME: 4mst
       PRIMARY: proton
-      RUN_NUMBER_START: 1
-      NUMBER_OF_RUNS: 2
+      RUN_NUMBER: 1
       AZIMUTH_ANGLE: North
       ZENITH_ANGLE: 20
       NSHOW: 5
