--- a/tests/integration_tests/config/simulate_prod_proton_20_deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_proton_20_deg_South_check_output.yml
@@ -10,8 +10,7 @@ CTA_SIMPIPE:
       SITE: South
       ARRAY_LAYOUT_NAME: alpha
       PRIMARY: proton
-      RUN_NUMBER_START: 1
-      NUMBER_OF_RUNS: 1
+      RUN_NUMBER: 1
       AZIMUTH_ANGLE: South
       ZENITH_ANGLE: 20
       NSHOW: 10
