--- a/tests/integration_tests/config/derive_psf_parameters_run.yml
+++ b/tests/integration_tests/config/derive_psf_parameters_run.yml
@@ -12,6 +12,6 @@ CTA_SIMPIPE:
       TEST: true
       OUTPUT_PATH: simtools-output
     INTEGRATION_TESTS:
-    - OUTPUT_FILE: results/ray-tracing-North-LSTN-01-d10.0km-za20.0deg_tune_psf.ecsv
+    - OUTPUT_FILE: results/ray_tracing_North_LSTN-01_d10.0km_za20.0deg_tune_psf.ecsv
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
