--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_North_corsika_corsika_particle_id.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_North_corsika_corsika_particle_id.yml
@@ -25,10 +25,10 @@ CTA_SIMPIPE:
       OUTPUT_PATH: simtools-output
       LOG_LEVEL: DEBUG
     INTEGRATION_TESTS:
-    - OUTPUT_FILE: 'corsika/data/run000010/gamma_run000010_North_test_layout_za020-azm000deg_test-production-North-corsika-corsika7-particle-id_North_test_layout_test-production-North-corsika-corsika7-particle-id.zst
+    - OUTPUT_FILE: 'corsika/data/run000010/gamma_run000010_za020deg_azm000deg_North_test_layout_6.0.0_test-production-North-corsika-corsika7-particle-id.zst
 
         '
-    - OUTPUT_FILE: 'corsika/data/run000011/gamma_run000011_North_test_layout_za020-azm000deg_test-production-North-corsika-corsika7-particle-id_North_test_layout_test-production-North-corsika-corsika7-particle-id.zst
+    - OUTPUT_FILE: 'corsika/data/run000011/gamma_run000011_za020deg_azm000deg_North_test_layout_6.0.0_test-production-North-corsika-corsika7-particle-id.zst
 
         '
     - OUTPUT_FILE: 'corsika/logs/gamma_run000010_za20deg_azm000deg_North_test_layout_6.0.0_test-production-North-corsika-corsika7-particle-id.corsika.log.gz
