--- a/tests/integration_tests/config/calculate_trigger_rate_one_file.yml
+++ b/tests/integration_tests/config/calculate_trigger_rate_one_file.yml
@@ -4,8 +4,6 @@ CTA_SIMPIPE:
   - APPLICATION: simtools-calculate-trigger-rate
     TEST_NAME: one_file
     CONFIGURATION:
-      SIMTEL_FILE_NAMES: './tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst
-
-        '
+      SIMTEL_FILE_NAMES: './tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst'
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
