--- a/tests/integration_tests/config/calculate_trigger_rate_one_file_area_from_distribution.yml
+++ b/tests/integration_tests/config/calculate_trigger_rate_one_file_area_from_distribution.yml
@@ -4,9 +4,7 @@ CTA_SIMPIPE:
   - APPLICATION: simtools-calculate-trigger-rate
     TEST_NAME: one_file_area_from_distribution
     CONFIGURATION:
-      SIMTEL_FILE_NAMES: './tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst
-
-        '
+      SIMTEL_FILE_NAMES: './tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst'
       AREA_FROM_DISTRIBUTION: true
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
