--- a/tests/integration_tests/config/generate_sim_telarray_histograms_hist_file_names_pdf_no_name.yml
+++ b/tests/integration_tests/config/generate_sim_telarray_histograms_hist_file_names_pdf_no_name.yml
@@ -4,9 +4,7 @@ CTA_SIMPIPE:
   - APPLICATION: simtools-generate-sim-telarray-histograms
     TEST_NAME: hist_file_names_pdf_no_name
     CONFIGURATION:
-      HIST_FILE_NAMES: './tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst
-
-        '
+      HIST_FILE_NAMES: './tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst'
       PDF: true
       OUTPUT_PATH: simtools-output
       TEST: true
