--- a/tests/integration_tests/config/generate_simtel_event_data_run.yml
+++ b/tests/integration_tests/config/generate_simtel_event_data_run.yml
@@ -6,11 +6,11 @@ CTA_SIMPIPE:
     CONFIGURATION:
       INPUT: 'tests/resources/*proton*.simtel.zst'
       OUTPUT_PATH: simtools-output
-      OUTPUT_FILE: output_file.hdf5
+      OUTPUT_FILE: output_file.fits.gz
       USE_PLAIN_OUTPUT_PATH: true
       MAX_FILES: 2
       PRINT_DATASET_INFORMATION: 5
     INTEGRATION_TESTS:
-    - OUTPUT_FILE: output_file.hdf5
+    - OUTPUT_FILE: output_file.fits.gz
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
