--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -135,6 +135,13 @@ jobs:
         if: contains(matrix.extra-args, 'codecov')
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_PROJECT_KEY: "gammasim_simtools_AY_ssha9WiFxsX-2oy_w"
+          SONAR_HOST_URL: "https://sonar-cta-dpps.zeuthen.desy.de"
+          SONAR_QUALITY_GATE_WAIT: "true"
+          SONAR_PYTHON_COVERAGE_REPORT_PATH: "coverage.xml"
+          SONAR_PYTHON_VERSION: ${{ matrix.python-version }}
+          SONAR_EXCLUSIONS: "**/docs/**,src/simtools/applications/*,**__init__.py"
+          SONAR_COVERAGE_EXCLUSIONS: "**/tests/**"
 
       - name: Random order
         if: github.event_name == 'schedule' && contains(matrix.extra-args, 'random-order')
