--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -135,13 +135,14 @@ jobs:
         if: contains(matrix.extra-args, 'codecov')
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_PROJECTKEY: "gammasim_simtools_AY_ssha9WiFxsX-2oy_w"
-          SONAR_HOST_URL: "https://sonar-cta-dpps.zeuthen.desy.de"
-          SONAR_QUALITY_GATE_WAIT: "true"
-          SONAR_PYTHON_COVERAGE_REPORT_PATH: "coverage.xml"
-          SONAR_PYTHON_VERSION: ${{ matrix.python-version }}
-          SONAR_EXCLUSIONS: "**/docs/**,src/simtools/applications/*,**__init__.py"
-          SONAR_COVERAGE_EXCLUSIONS: "**/tests/**"
+        with:
+          args: >
+            -Dsonar.projectKey="gammasim_simtools_AY_ssha9WiFxsX-2oy_w"
+            -Dsonar.host.url=https://sonar-cta-dpps.zeuthen.desy.de
+            -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.python.version=${{ matrix.python-version }}
+            -Dsonar.exclusions="**/docs/**,src/simtools/applications/*,**__init__.py"
+            -Dsonar.coverage.exclusions="**/tests/**""
 
       - name: Random order
         if: github.event_name == 'schedule' && contains(matrix.extra-args, 'random-order')
