--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -145,6 +145,19 @@ jobs:
           pytest --color=yes -n 4 --dist loadscope --count 5 --random-order \
            --retries 2 --retry-delay 5
 
+      - name: Configure Codecov
+        if: contains(matrix.extra-args, 'codecov')
+        run: |
+          cat > codecov.yml << 'EOF'
+          comment: off
+          coverage:
+            status:
+              project:
+                default:
+                  target: auto
+                  threshold: 0.1%
+          EOF
+
       - name: Upload coverage report to codecov
         uses: codecov/codecov-action@v5
         if: contains(matrix.extra-args, 'codecov')
