--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ scripts.simtools-generate-default-metadata = "simtools.applications.generate_def
 scripts.simtools-generate-regular-arrays = "simtools.applications.generate_regular_arrays:main"
 scripts.simtools-generate-sim-telarray-histograms = "simtools.applications.generate_sim_telarray_histograms:main"
 scripts.simtools-generate-simtel-event-data = "simtools.applications.generate_simtel_event_data:main"
+scripts.simtools-merge-tables = "simtools.applications.merge_tables:main"
 scripts.simtools-plot-array-layout = "simtools.applications.plot_array_layout:main"
 scripts.simtools-plot-tabular-data = "simtools.applications.plot_tabular_data:main"
 scripts.simtools-print-version = "simtools.applications.print_version:main"
