--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_multiple_model_versions.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_multiple_model_versions.yml
@@ -21,8 +21,11 @@ CTA_SIMPIPE:
       SIM_TELARRAY_INSTRUMENT_SEEDS: 1745,290
       CORSIKA_TEST_SEEDS: true
       PACK_FOR_GRID_REGISTER: simtools-grid-output
+      SAVE_REDUCED_EVENT_LISTS: true
       LOG_LEVEL: DEBUG
     INTEGRATION_TESTS:
+    - OUTPUT_FILE: 'sim_telarray/data/run000001/gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_multiple_model_versions.hdf5'
+    - OUTPUT_FILE: 'sim_telarray/data/run000001/gamma_run000001_za20deg_azm180deg_South_alpha_6.1.0_multiple_model_versions.hdf5'
     - TEST_OUTPUT_FILES:
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
         FILE: gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_multiple_model_versions.log_hist.tar.gz
